--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </nav>
         <div class="splash-inner">
-            <h1 class="page-title">Witaj na mojej stronie,</h1>
+            <h1 class="page-title">Welcome To Our Studio</h1>
             <h2 class="page-subtitle">miło Ciebie <span>widzieć</span></h2>
             <a href="#" class="btn btn-one">see our work</a>
         </div>
