--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>My first website</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
