Change position section splash

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="splash-inner">
             <h1 class="page-title">Welcome To Our Studio</h1>
-            <h2 class="page-subtitle">miło Ciebie <span>widzieć</span></h2>
+            <h2 class="page-subtitle">IT'S NICE TO MEET YOU</h2>
             <a href="#" class="btn btn-one">see our work</a>
         </div>
     </header>
