--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
       <meta charset="utf-8">
       <title>My first website</title>
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="vendor/bootstrap-grid.css">
       <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -23,7 +25,7 @@
         <div class="splash-inner">
             <h1 class="page-title">Welcome To Our Studio</h1>
             <h2 class="page-subtitle">IT'S NICE TO MEET YOU</h2>
-            <a href="#" class="btn btn-one">see our work</a>
+            <a href="#" class="btn btn-one"><strong>TELL ME MORE</strong></a>
         </div>
     </header>
   </body>
