Change the inscription services

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
       <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
       <link rel="stylesheet" href="vendor/bootstrap-grid.css">
       <link rel="stylesheet" href="css/style.css">
   </head>
@@ -28,5 +29,31 @@
             <a href="#" class="btn btn-one"><strong>TELL ME MORE</strong></a>
         </div>
     </header>
+    <section>
+        <div class="container">
+            <h1 class="title-services">SERVICES</h1>
+            <h2 class="sub-title-services">in dictum non consectetur a erat nam</h2>
+            <div class="row-services">
+                <div class="box-services">
+                <i class="fa-sharp fa-light fa-1"></i>
+                    <h2>design</h2>
+                    <p class="big">Curubitur ornare.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="box-services">
+                <i class="fa-sharp fa-light fa-2"></i>
+                    <h2>code</h2>
+                    <p class="big">Cras vel commodo.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="box-services">
+                <i class="fa-sharp fa-light fa-3"></i>
+                    <h2>marketing</h2>
+                    <p class="big">Donec fringilla.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
