Add text on section services in index.html

--- a/index.html
+++ b/index.html
@@ -33,24 +33,35 @@
         <div class="container">
             <h1 class="title-services">SERVICES</h1>
             <h2 class="sub-title-services">in dictum non consectetur a erat nam</h2>
-            <div class="row-services">
-                <div class="box-services">
-                <i class="fa-sharp fa-light fa-1"></i>
-                    <h2>design</h2>
-                    <p class="big">Curubitur ornare.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="box-services">
-                <i class="fa-sharp fa-light fa-2"></i>
-                    <h2>code</h2>
-                    <p class="big">Cras vel commodo.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                </div>
-                <div class="box-services">
-                <i class="fa-sharp fa-light fa-3"></i>
-                    <h2>marketing</h2>
-                    <p class="big">Donec fringilla.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col">
+                        <div class="fonts-services">
+                            <i class="fa-solid fa-shop"></i>
+                        </div>
+                        <div class="text-services">
+                            <h1><strong>E-Commerce</strong></h1>
+                            <p>venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="fonts-services">
+                            <i class="fa-solid fa-shop"></i>
+                        </div>
+                        <div class="text-services">
+                            <h1><strong>Responsive Web</strong></h1>
+                            <p>venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="fonts-services">
+                            <i class="fa-solid fa-shop"></i>
+                        </div>
+                        <div class="text-services">
+                            <h1><strong>Web Security</strong></h1>
+                            <p>venenatis a condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus et malesuada fames</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
