Add section portfolio to index.html

--- a/index.html
+++ b/index.html
@@ -66,5 +66,69 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h1 class="title-services">OUR PORTFOLIO</h1>
+            <h2 class="sub-title-services">in dictum non consectetur a erat nam</h2>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Ebony &amp; Ivony</strong></h1>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Smart Stationary</strong></h1>
+                            <p>Print Design</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Clever Poster</strong></h1>
+                            <p>Print Design</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Vinyl Record</strong></h1>
+                            <p>Product Mock-Up</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Treehouse Template</strong></h1>
+                            <p>Web Design</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="portfolio-image">
+                            <img src="images/img1.jpg" alt="...">
+                        </div>
+                        <div class="text-portfolio">
+                            <h1><strong>Burned Logo</strong></h1>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
