Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -130,5 +130,20 @@
             </div>
         </div>
     </section>
+    <div class="footer">
+        <div class="container">
+            <div class="d-flex">
+                <div class="p-2 bd-highlight" style="line-height: 9;">© Copyright 2014 FreebiesXpress.com</div>
+                <div class="p-2 bd-highlight">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
