Change position footer text and fonts

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="col">
                         <div class="fonts-services">
-                            <i class="fa-solid fa-shop"></i>
+                            <i class="fa-solid fa-laptop-code"></i>
                         </div>
                         <div class="text-services">
                             <h1><strong>Responsive Web</strong></h1>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col">
                         <div class="fonts-services">
-                            <i class="fa-solid fa-shop"></i>
+                            <i class="fa-solid fa-lock"></i>
                         </div>
                         <div class="text-services">
                             <h1><strong>Web Security</strong></h1>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-4">
                         <div class="portfolio-image">
-                            <img src="images/img1.jpg" alt="...">
+                            <img src="images/img4.jpg" alt="...">
                         </div>
                         <div class="text-portfolio">
                             <h1><strong>Smart Stationary</strong></h1>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="col-4">
                         <div class="portfolio-image">
-                            <img src="images/img1.jpg" alt="...">
+                            <img src="images/img4.jpg" alt="...">
                         </div>
                         <div class="text-portfolio">
                             <h1><strong>Vinyl Record</strong></h1>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="col-4">
                         <div class="portfolio-image">
-                            <img src="images/img1.jpg" alt="...">
+                            <img src="images/img4.jpg" alt="...">
                         </div>
                         <div class="text-portfolio">
                             <h1><strong>Burned Logo</strong></h1>
@@ -133,13 +133,13 @@
     <div class="footer">
         <div class="container">
             <div class="d-flex">
-                <div class="p-2 bd-highlight" style="line-height: 9;">© Copyright 2014 FreebiesXpress.com</div>
+                <div class="p-2 bd-highlight">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="p-2 bd-highlight">
                     <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a aria-hidden="true" href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a aria-hidden="true" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a aria-hidden="true" href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a aria-hidden="true" href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </div>
             </div>
